Addressed reveiw comments